# ferman-browser

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: build.yml  release.yml
resources/: ferman-browser.desktop
src/: ai_manager.cpp  ai_manager.h  bookmark_manager.cpp  bookmark_manager.h  browser_window.cpp  browser_window.h  browser_window_update.cpp  crypto_utils.cpp  crypto_utils.h  download_manager.cpp  download_manager.h  file_extractor.cpp  file_extractor.h  history_manager.cpp  history_manager.h  main.cpp  session_manager.cpp  session_manager.h  settings_manager.cpp  settings_manager.h  setup_manager.cpp  setup_manager.h  tab.h  update_manager.cpp  update_manager.h
